--- a/loginregister.css
+++ b/loginregister.css
@@ -56,7 +56,14 @@ button {
 	border: none;
 }
 
-
+#azlogo{
+	
+	width: 300px;
+	height: 100px;
+	background: url(logo2.png);
+	background-size: cover;	
+	margin-top: 5px;	
+}
 
 
 
