--- a/loginregister.css
+++ b/loginregister.css
@@ -56,6 +56,15 @@ button {
 	border: none;
 }
 
+#logo{
+      
+	background-image: url(logo2.png);
+	background-size: cover;
+	margin-left: 10px;
+	margin-right: 50px;
+	padding-top: 10px;
+}
+
 
 
 
