--- a/loginregister.css
+++ b/loginregister.css
@@ -4,7 +4,7 @@ body {
 	align-items: center;
 	height: 100vh;
 	flex-direction: column;
-    background-color: aquamarine;
+    background:url(4.jpg);
 }
 
 *{
