--- a/home page.css
+++ b/home page.css
@@ -103,5 +103,15 @@ a{
     
   }
 
+  .bphoto{
+    width: 100%;
+   height: 768px;
+   background-color: aquamarine;
+    background-image: url(13.jpeg);
+    background-size: cover;
+    padding: 10px;
+    
+  }
+
 
 
