--- a/home page.css
+++ b/home page.css
@@ -113,5 +113,17 @@ a{
     
   }
 
+  .footer{
+    width: 100%;
+    height: 50px;
+    color: white;
+    background-color: black;
+    text-align: center;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+    
+  }
+
 
 
