--- a/src/style/Cprogramming.css
+++ b/src/style/Cprogramming.css
@@ -6,21 +6,37 @@
     position: relative;
 }
 
+
+
+.background{  /* background wallpaper*/
+
+    background-size: cover;
+    height: 100vh;
+    height: 20%;  
+    position: relative; 
+
+}
+
 .logo img{  /* website logo*/
 
     width: 300px;
     height: 100px;
     margin: 0;
     padding: 0;
+  
     
     
 }
 
 nav{ /* navigation */
-    width:auto;
-    height: 98px;
-    background: black;
+    width:1603px;
+    height: 100px;
+    background: white;
     overflow: auto;
+    margin-left: 300px;
+    margin-top: -104px;
+   
+   
    
     
 
@@ -46,7 +62,7 @@ nav ul li a{
     padding: 20px 25px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-    color:white;
+    color:black;
     margin-top: 15px;
     
 
@@ -66,5 +82,200 @@ nav ul li a:hover{
     margin-top: 15px;
     font-weight: bold;
     text-align: center;
+    position: relative;
+    
+    
+
+}
+
+.table1{
+
+    width: 1000px;
+    height: 400px;
+    margin-left: 50px;
+    background-color:black;
+    color: white;
+    letter-spacing: 1px;
+    padding-left: 350px;
+    margin-top: -404px;
+    position: relative;
+    border-radius: 30px 0px 0px 30px;
+    
+}
+
+.htmllogo {
+
+
+    width : 600px;
+    height: 400px;
+    margin-left: 1050px;
+    margin-top: 50px;
+    position: relative;
+    border-radius: 0 30px 30px 0px;
+}
+
+.htmlsubt{
+
+    width: 350px;
+    height: 50px;
+    margin-left: 650px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 30px;
+    cursor: pointer;
+
+}
+
+.table2{
+
+
+    width: 1000px;
+    height: 400px;
+    margin-left: 50px;
+    background-color:white;
+    color:black;
+    letter-spacing: 1px;
+    padding-left: 350px;
+    margin-top: -404px;
+    position: relative;
+    border-radius: 30px 0px 0px 30px;
+}
+
+.csslogo{
+
+
+    width : 600px;
+    height: 400px;
+    margin-left: 1050px;
+    margin-top: 50px;
+    position: relative;
+    border-radius: 0 30px 30px 0px;
+}
+
+.csssubt{
+
+    width: 350px;
+    height: 50px;
+    margin-left: 650px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 30px;
+    cursor: pointer;
+
+}
+
+.table3{
+
+    width: 1000px;
+    height: 400px;
+    margin-left: 50px;
+    background-color: black;
+    color: white;
+    letter-spacing: 1px;
+    padding-left: 350px;
+    margin-top: -404px;
+    position: relative;
+    border-radius: 30px 0px 0px 30px;
+
+
+}
+
+.ccclogo{
+
+    width : 600px;
+    height: 400px;
+    margin-left: 1050px;
+    margin-top: 50px;
+    position: relative;
+    border-radius: 0 30px 30px 0px;
+}
+
+.cccsubt{
+
+    width: 350px;
+    height: 50px;
+    margin-left: 650px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 30px;
+    cursor: pointer;
+
+
+}
+
+.table4{
+
+    width: 1000px;
+    height: 400px;
+    margin-left: 50px;
+    background-color:white;
+    color:black;
+    letter-spacing: 1px;
+    padding-left: 350px;
+    margin-top: -404px;
+    position: relative;
+    border-radius: 30px 0px 0px 30px;
+}
+
+.javalogo{
+
+    width : 600px;
+    height: 400px;
+    margin-left: 1050px;
+    margin-top: 50px;
+    position: relative;
+    border-radius: 0 30px 30px 0px;
+}
+
+.javasubt{
+
+    width: 350px;
+    height: 50px;
+    margin-left: 650px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.table5{
+
+    width: 1000px;
+    height: 400px;
+    margin-left: 50px;
+    background-color: black;
+    color: white;
+    letter-spacing: 1px;
+    padding-left: 350px;
+    margin-top: -404px;
+    position: relative;
+    border-radius: 30px 0px 0px 30px;
+}
+
+.clogo{
+
+    width : 600px;
+    height: 400px;
+    margin-left: 1050px;
+    margin-top: 50px;
+    position: relative;
+    border-radius: 0 30px 30px 0px;
+}
+
+.csubt{
+
+    width: 350px;
+    height: 50px;
+    margin-left: 650px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 30px;
+    cursor: pointer;
+
 
 }
