--- a/home page.css
+++ b/home page.css
@@ -105,7 +105,7 @@ a{
 
   .bphoto{
     width: 100%;
-   height: 768px;
+   height: 683px;
    background-color: aquamarine;
     background-image: url(13.jpeg);
     background-size: cover;
@@ -123,6 +123,34 @@ a{
 	justify-content: center;
 	align-items: center;
     
+  }
+
+  .Cprograming{
+    width: 100%;
+    height: 620px;
+     background-image: url(images/c4.png);
+     background-size: cover;
+  }
+
+  .html{
+    width: 100%;
+    height: 526px;
+     background-image: url(images/ht7.jpg);
+     background-size: cover;
+  }
+
+  .css{
+    width: 100%;
+    height: 600px;
+     background-image: url(images/cs4.png);
+     background-size: cover;
+  }
+
+  .java{
+    width: 100%;
+    height: 639px;
+     background-image: url(images/java2.png);
+     background-size: cover;
   }
 
 
