--- a/Home Branch/home page.css
+++ b/Home Branch/home page.css
@@ -128,28 +128,28 @@ a{
   .Cprograming{
     width: 100%;
     height: 620px;
-     background-image: url(images/c4.png);
+     background-image: url(home-images/c4.png);
      background-size: cover;
   }
 
   .html{
     width: 100%;
     height: 526px;
-     background-image: url(images/ht7.jpg);
+     background-image: url(home-images/ht7.jpg);
      background-size: cover;
   }
 
   .css{
     width: 100%;
     height: 600px;
-     background-image: url(images/cs4.png);
+     background-image: url(home-images/cs4.png);
      background-size: cover;
   }
 
   .java{
     width: 100%;
     height: 639px;
-     background-image: url(images/java2.png);
+     background-image: url(home-images/java2.png);
      background-size: cover;
   }
 
