--- a/Home Branch/home page.css
+++ b/Home Branch/home page.css
@@ -4,6 +4,7 @@
     padding: 0px;
 }
 
+/*navigation bar*/
 .head{
     width: 100%;
     height: 65px;
@@ -86,8 +87,8 @@ a{
       color: yellow;
   }
 
-  #logo{
-      
+  /*AZ logo*/
+  #logo{ 
       background-image: url(logo2.png);
       background-size: cover;
       margin-left: 10px;
@@ -96,23 +97,21 @@ a{
   }
 
   #login{
-     float: right;
-    
+     float: right;   
     overflow: hidden;
-     
-    
   }
 
+/*Background Photo*/
   .bphoto{
     width: 100%;
-   height: 683px;
+   height: 600px;
    background-color: aquamarine;
     background-image: url(13.jpeg);
     background-size: cover;
-    padding: 10px;
-    
+    padding: 10px; 
   }
 
+  /*footer*/
   .footer{
     width: 100%;
     height: 50px;
@@ -120,38 +119,56 @@ a{
     background-color: black;
     text-align: center;
     display: flex;
-	justify-content: center;
-	align-items: center;
-    
+	  justify-content: center;
+	  align-items: center;
   }
 
   .Cprograming{
-    width: 100%;
-    height: 620px;
+    width: 50%;
+    height: 350px;
      background-image: url(home-images/c4.png);
      background-size: cover;
+     float: left;
   }
 
   .html{
-    width: 100%;
-    height: 526px;
+    width: 50%;
+    height: 350px;
      background-image: url(home-images/ht7.jpg);
      background-size: cover;
+     float: right;
   }
 
   .css{
-    width: 100%;
-    height: 600px;
+    width: 50%;
+    height: 350px;
      background-image: url(home-images/cs4.png);
      background-size: cover;
+     float: left;
   }
 
   .java{
-    width: 100%;
-    height: 639px;
+    width: 50%;
+    height: 350px;
      background-image: url(home-images/java2.png);
      background-size: cover;
+     float: right;
   }
+
+.learn{
+width: 120px;
+height: 50px;
+background-color: red;
+display: flex;
+justify-content: center;
+align-items: center;
+color: rgb(255, 255, 255);
+font-weight: bold;
+float: right;
+margin-top: 280px;
+margin-right: 30px;
+}
+
 
 
 
