--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -22,3 +22,53 @@ h1{
 h2{
     margin: 45px;
 }
+
+.photos{
+    width: 80%;
+    height: 400px;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+    border: 10px solid black;
+    margin-top: 30px;
+}
+
+
+#photo1{
+    width: 50%;
+    height: 280px;
+    background-image: url(photos/gitgif.gif);
+    background-size: cover;
+}
+
+#photo2{
+    width: 50%;
+    height: 280px;
+    background-image: url(photos/codeblock.png);
+    background-size: cover;
+}
+
+#photo3{
+    width: 50%;
+    height: 280px;
+    background-image: url(photos/ntbeansgif.gif);
+    background-size: cover;
+}
+
+#photo4{
+    width: 50%;
+    height: 280px;
+    background-image: url(photos/xampp.png);
+    background-size: cover;
+}
+
+#photo5{
+    width: 50%;
+    height: 280px;
+    background-image: url(photos/vscode.gif);
+    background-size: cover;
+}
+
+h2{
+    float: right;
+}
