--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -4,23 +4,32 @@
     margin: 0px;
     padding: 0px;
 }
-h1{
-    color: rgb(247, 247, 252);
-    
-    
-}
 
 .top{
     width: 100%;
     height: 70px;
     background-color: rgb(76, 0, 255);
     display: flex;
-	justify-content: center;
+	justify-content: inherit;
 	align-items: center;
 }
 
-h2{
-    margin: 45px;
+/*home button*/
+.btn {
+    background-color: rgb(76, 0, 255); 
+    float: left;
+    margin-left: 10px;
+    border: none; 
+    color: white; 
+   
+    font-size: 46px; 
+    cursor: pointer; /* Mouse pointer on hover */
+  }
+
+h1{
+    color: rgb(247, 247, 252);
+    float: right;  
+    margin-left: 20%;   
 }
 
 .photos{
@@ -71,4 +80,6 @@ h2{
 
 h2{
     float: right;
+    margin-left: 30px;
 }
+
