--- a/Forum-LoginTest/templates/css/custom.css
+++ b/Forum-LoginTest/templates/css/custom.css
@@ -25,7 +25,7 @@ h3{
 /* Navbar Customization */
 .navbar{
 	height:40px !important;
-	background:#5c5b69;
+	background:#1b0ed3;
 	border:0;
 	margin-bottom:30px;
 }
@@ -86,6 +86,7 @@ h3{
 
 .topic-content{
 	width:100%;
+	height: 100%;
 }
 
 img.avatar{
@@ -129,4 +130,6 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 .btn-primary{
 	background:#5c5b69;
+
 }
+
