--- a/Home Branch/home page.css
+++ b/Home Branch/home page.css
@@ -131,7 +131,7 @@ a{
   position: relative;
   width: 500%;
   margin: 0;
-  animation: anim 40s infinite;
+  animation: anim 25s infinite;
 }
 
 /*animation*/
@@ -140,66 +140,44 @@ a{
     left: 0%;
   }
 
-  10%{
+  18%{
     left: 0%;
   }
 
-  12%{
+  20%{
     left: -100%;
   }
 
-  22%{
+  38%{
     left: -100%;
   }
-  24%{
+  40%{
     left:-200%;
-  }
-
-  34%{
-    left:-200%;
-  }
-
-  36%{
-    left: -300%;
-  }
-  46%{
-    left: -300%;
-  }
-  48%{
-    left: -400%;
   }
 
   58%{
-    left: -400%;
+    left:-200%;
   }
 
   60%{
-    left: -300%;
+    left:-300%;
   }
 
-  70%{
-    left: -300%;
+  78%{
+    left:-300%;
   }
 
-  72%{
-    left: -200%;
+  80%{
+    left: -400%;
+  }
+  
+  99.9%{
+    left: -400%;
+  }
+  100%{
+    left: 0%
   }
 
-  82%{
-    left: -200%;
-  }
-
-  84%{
-    left: -100%;
-  }
-
-  94%{
-    left: -100%;
-  }
-
-  96%{
-    left: 0%;
-  }
 
 }
 
