--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -3,8 +3,14 @@
 	box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    
 }
 
+body{
+
+    background-image: url(photos/1.jpg);
+    background-size: cover;
+}
 .top{
     width: 100%;
     height: 70px;
@@ -38,8 +44,11 @@ h1{
     display: flex;
 	justify-content: center;
 	align-items: center;
-    border: 10px solid black;
+    border: 5px solid black;
     margin-top: 30px;
+    background-color: rgb(153, 187, 250);
+    border-radius: 10px;
+    
 }
 
 
@@ -81,5 +90,10 @@ h1{
 h2{
     float: right;
     margin-left: 30px;
+}
+
+a{
+    color: crimson;
+    
 }
 
