--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -8,8 +8,8 @@
 
 body{
 
-    background-image: url(photos/1.jpg);
-    background-size: cover;
+    background-image: url(photos/2.jpg);
+    background-size: inherit;
 }
 .top{
     width: 100%;
@@ -18,6 +18,7 @@ body{
     display: flex;
 	justify-content: inherit;
 	align-items: center;
+    padding: 0px;
 }
 
 /*home button*/
@@ -44,10 +45,10 @@ h1{
     display: flex;
 	justify-content: center;
 	align-items: center;
-    border: 5px solid black;
+    border: 5px solid rgb(72, 17, 223);
     margin-top: 30px;
-    background-color: rgb(153, 187, 250);
-    border-radius: 10px;
+    background-color: rgb(224, 232, 247);
+    border-radius: 20px; 
     
 }
 
@@ -57,6 +58,8 @@ h1{
     height: 280px;
     background-image: url(photos/gitgif.gif);
     background-size: cover;
+    border: 2px solid black;
+    
 }
 
 #photo2{
@@ -64,6 +67,7 @@ h1{
     height: 280px;
     background-image: url(photos/codeblock.png);
     background-size: cover;
+    border: 2px solid black;
 }
 
 #photo3{
@@ -71,6 +75,7 @@ h1{
     height: 280px;
     background-image: url(photos/ntbeansgif.gif);
     background-size: cover;
+    border: 2px solid black;
 }
 
 #photo4{
@@ -78,6 +83,7 @@ h1{
     height: 280px;
     background-image: url(photos/xampp.png);
     background-size: cover;
+    border: 2px solid black;
 }
 
 #photo5{
@@ -85,11 +91,13 @@ h1{
     height: 280px;
     background-image: url(photos/vscode.gif);
     background-size: cover;
+    border: 2px solid black;
 }
 
 h2{
     float: right;
     margin-left: 30px;
+
 }
 
 a{
