--- a/Category-Branch/style/htmllesson.css
+++ b/Category-Branch/style/htmllesson.css
@@ -55,6 +55,7 @@ nav ul li a{
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     color:black;
+    font-weight: bold;
     margin-top: 15px;
    
     
