--- a/Category-Branch/style/csslesson.css
+++ b/Category-Branch/style/csslesson.css
@@ -105,5 +105,33 @@ nav ul li a:hover{
 .selector1{
 
     color: cyan;
+}
+
+.listhead{
+
+    color: white;
+}
+
+.listtable{
+
+    width: 850px;
+    margin-left: 340px;
+}
+
+.tablehead{
+
+    height: 40px;
+    font-size:x-large;
+    background-color: aquamarine;
+    color: white;
+}
+
+.tablerow{
+
+    height: 30px;
+    background-color:navy;
+    font-size: large;
+    color: white;
+
 
 }
