--- a/Master-Branch/Forum-NewTest/forums.css
+++ b/Master-Branch/Forum-NewTest/forums.css
@@ -7,30 +7,28 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.nav-bar{
-    background-color: #45B8ff;
-    width: 100%;
-    height: 60px;
-    display: flex;
+
+.topnav {
+    position: relative;
+    background-color: rgb(99, 40, 236);
+    overflow: hidden;
+   height: 50px;
     align-items: center;
-}
+ 
+  }
 
 .logo{
-    width: 100px;
-    height: 30px;
+    position: relative;
     background-image: url(1.png);
     background-size: cover;
 }
 
-.cont{
-    position: relative;
+div li{
+    display: inline;  
 }
-
-
-.nav-bar li{
-    list-style-type: none;
-    display: inline;
-    float: right; 
-   
-      
-}
+ 
+  /* Right-aligned section inside the top navigation */
+  .topnav-right {
+    float: right;
+  }
+  
