--- a/Resources/youtube.css
+++ b/Resources/youtube.css
@@ -6,10 +6,6 @@ padding: 0;
 box-sizing: border-box;
 }
 
-body{
-    
-}
-
 .top{
     width: 100%;
     height: 60px;
@@ -22,4 +18,13 @@ body{
 h1{
     color: cornsilk;
     font-family: 'Roboto', sans-serif;
+}
+
+.links{
+    margin: 10px;
+    font-size: 23px;
+}
+
+.links div{
+    margin: 20px;
 }
