--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -19,6 +19,8 @@ body{
 	justify-content: inherit;
 	align-items: center;
     padding: 0px;
+    position: fixed;
+    top: 0px;
 }
 
 /*home button*/
@@ -40,15 +42,16 @@ h1{
 }
 
 .photos{
-    width: 80%;
+    width: 70%;
     height: 400px;
     display: flex;
 	justify-content: center;
 	align-items: center;
     border: 5px solid rgb(72, 17, 223);
     margin-top: 30px;
+    margin-bottom: 30px;
     background-color: rgb(224, 232, 247);
-    border-radius: 20px; 
+    
     
 }
 
@@ -105,3 +108,6 @@ a{
     
 }
 
+#first{
+    margin-top: 100px;
+}
