--- a/Master-Branch/Forum-NewTest/forums.css
+++ b/Master-Branch/Forum-NewTest/forums.css
@@ -5,6 +5,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
+   background-color: rgb(172, 196, 248);
 }
 
   /* Right-aligned section inside the top navigation */
@@ -60,6 +61,7 @@ body{
     color: rgb(218, 241, 6);
 }
 
+/* Seacrch bar */
 input[type=text] {
   
   padding: 6px;
@@ -83,7 +85,36 @@ input[type=text] {
   font-size: 17px;
   border: none;
   cursor: pointer;
-  
-
 }
   
+/****************************** End of the Header *******************************************************/
+.all{
+  box-sizing: border-box;
+  margin-top: 50px;
+  
+  
+}
+
+.left{
+
+  width: 55%;
+  height: 800px;
+  background-color: white;
+  float: left;
+  padding: 20px;
+  margin: 5%;
+  border-radius: 10px;
+  margin-top: 3%;
+}
+
+.right{
+
+  width: 30%;
+  height: 200px;
+  background-color: white;
+  float: right;
+  margin: 5%;
+  margin-left: 0px;
+  border-radius: 10px;
+  margin-top: 3%;
+}
