--- a/Home Branch/ourteam.css
+++ b/Home Branch/ourteam.css
@@ -36,6 +36,16 @@ body{
     
 }
 
+.bdr3{
+    display: block;
+    margin: auto;
+    width: 160px;
+    height: 3px;
+    background-color: #c0392b;
+   
+    
+}
+
 /* Images */
 .pic{
     margin-bottom: 40px;
@@ -45,9 +55,9 @@ body{
     display: inline-block;
     border: #c0392b 8px solid;
     
-    margin: 0 10px;
-    width: 160px;
-    height: 160px;
+    margin: 0 20px;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
     transition: all 0.5s ease-in;
     
@@ -55,7 +65,7 @@ body{
 
 .pic a img{
     width: 100%;
-    filter: grayscale(100%);
+    
     transition: all 0.4s;
 }
 
@@ -69,7 +79,7 @@ body{
 
 /* Description */
 .desc{
-    width: 600px;
+    width: 40%;
     margin: auto;
     background-color: #2c3e50;
     font-size: 18px;
@@ -78,21 +88,30 @@ body{
     text-align: justify;
     overflow: hidden;
     height: 0;
+    
 }
 
 .desc:target{
     height: auto;
-    padding: 40px;
+    padding: 30px;
     transition: all 0.3s ease-in;
 }
 
-.name, .social{
+.name, .social, .stdid{
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 30px;
     transition: all 0.5s ease-in;
+}
+
+.name{
+    margin-bottom: 10px;
+}
+
+.stdid{
+    font-size: 15px;
 }
 
 .social i{
