--- a/Master-Branch/Forum-NewTest/comment-reply-system/main.css
+++ b/Master-Branch/Forum-NewTest/comment-reply-system/main.css
@@ -27,3 +27,7 @@ textarea { display: block; margin-bottom: 10px; }
 	display: none;
 }
 #comment_form { margin-top: 10px; }
+
+.active{
+	background-color: chocolate;
+  }
