--- a/Master-Branch/Forum-NewTest/forums.css
+++ b/Master-Branch/Forum-NewTest/forums.css
@@ -29,6 +29,8 @@ body{
     height: 50px;
     margin-right: 10px;
     margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Nav bar */
@@ -38,7 +40,7 @@ body{
 }
 
 #navbar ul{
-    padding: 0;
+    padding: 10px;
     list-style: none;
 }
 
@@ -76,7 +78,7 @@ input[type=text] {
   
 }
 
-.container .search-container button {
+.cont .search-container button {
   
   padding: 6px 10px;
   margin-top: 8px;
@@ -85,6 +87,14 @@ input[type=text] {
   font-size: 17px;
   border: none;
   cursor: pointer;
+}
+
+#qa{
+  color: white;
+ 
+  font: 3em sans-serif;
+  font-weight: bold;
+  
 }
   
 /****************************** End of the Header *******************************************************/
@@ -168,3 +178,37 @@ background-color: rgb(235, 155, 98);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 25px;
 }
+
+
+
+
+
+form button { margin: 5px 0px; }
+textarea { display: block; margin-bottom: 10px; }
+/*post*/
+.post { border: 1px solid #ccc; margin-top: 10px; }
+/*comments*/
+.comments-section { margin-top: 10px; border: 1px solid #ccc; }
+.comment { margin-bottom: 10px; }
+.comment .comment-name { font-weight: bold; }
+.comment .comment-date {
+	font-style: italic;
+	font-size: 0.8em;
+}
+.comment .reply-btn, .edit-btn { font-size: 0.8em; }
+.comment-details { width: 91.5%; float: left; }
+.comment-details p { margin-bottom: 0px; }
+.comment .profile_pic {
+	width: 35px;
+	height: 35px;
+	margin-right: 5px;
+	float: left;
+	border-radius: 50%;
+}
+/*replies*/
+.reply { margin-left: 30px; }
+.reply_form {
+	margin-left: 40px;
+	display: none;
+}
+#comment_form { margin-top: 10px; }
