--- a/Home Branch/home page.css
+++ b/Home Branch/home page.css
@@ -268,7 +268,7 @@ border-radius: 10px;
 }
 
 #hr1{
-  border-top: 10px solid blue;
+  border-top: 10px solid rgb(0, 0, 5);
 
 }
 
@@ -276,7 +276,7 @@ h1{
   text-align: center;
   padding: 10px;
   font-size: 45px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: arial;
   padding-top: 20px;
   font-weight: bold;
 }
@@ -291,7 +291,8 @@ h1{
 .learn1{
   width: 100%;
   height: auto;
- 
+ background: url(Home-Images/1.jpg);
+ background-size: cover;
   
 }
 
