--- a/Community Branch/download.css
+++ b/Community Branch/download.css
@@ -51,7 +51,7 @@ h1{
     margin-top: 30px;
     margin-bottom: 30px;
     background-color: rgb(224, 232, 247);
-    
+    border-radius: 20px;
     
 }
 
