change logo location

--- a/Home Branch/home page.css
+++ b/Home Branch/home page.css
@@ -94,7 +94,7 @@ a{
 
   /*AZ logo*/
   #logo{ 
-      background-image: url(logo2.png);
+      background-image: url(images/logo2.png);
       background-size: cover;
       margin-left: 50px;
       margin-right: 200px;
