--- a/Category-Branch/style/htmllesson.css
+++ b/Category-Branch/style/htmllesson.css
@@ -2,18 +2,12 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
-    text-decoration: none;
-    position: relative;
+    
+   
 }
+body {
 
-
-.background{  /* background wallpaper*/
-
-    background-size: cover;
-    height: 100vh;
-    height: 20%;  
-    position: relative; 
-
+    background: black;
 }
 
 .logo img{  /* website logo*/
@@ -28,16 +22,15 @@ nav{ /* navigation */
     width:auto;
     height: 100px;
     background: white;
-    overflow: auto;
     margin-left: 300px;
     margin-top: -104px;
-    position: absolute;
+   
 }
 
 nav ul{
 
     padding: 0;
-    margin: 0 0 0 250px;
+    margin: 0 0 0 150px;
     list-style: none;
    
 }
@@ -52,14 +45,12 @@ nav ul li a{
     width: 100px;
     display: block;
     padding: 20px 25px;
-    text-decoration: none;
+    text-decoration: none; 
     font-family: Arial, Helvetica, sans-serif;
     color:black;
     font-weight: bold;
     margin-top: 15px;
    
-    
-
 }
 
 nav ul li a:hover{
@@ -68,15 +59,9 @@ nav ul li a:hover{
     text-transform:uppercase;
 }
 
-.search{
-
-    border-radius: 30px;
-    width:190px;
-    height: 50px;
-    margin-top: 15px;
-    font-weight: bold;
-    text-align: center;
-   
+@media screen and (max-width: 600px ) {
+    
+    .container { width: 100px;}
 }
 
 .intro{
@@ -123,160 +108,3 @@ nav ul li a:hover{
 
 
 }
-
-.nav2{
-
-    width:auto;
-    height: 150px;
-    background: white;
-    margin-top: 337px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    
-
-}
-
-
-
-.visa{
-
-    height: 50px;
-    margin-top: 50px;
-    margin-left: 5px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.visa:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-   
-}
-
-.mastercard{
-
-    height: 50px;
-    margin-left: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-    
-}
-
-.mastercard:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-
-.amercian{
-
-    height: 50px;
-    margin-left: 40px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.amercian:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-.copy{
-
-    color: black;
-    text-align: center;
-    margin-top: -40px;
-    cursor: pointer;
-    
-}
-
-.googlestore{
-
-    height: 50px;
-    margin-left: 50%;
-    margin-top: 30px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-.googlestore:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-
-
-
-
-.applestore{
-
-    height: 50px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.applestore:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-
-.facebook{
-
-    height: 50px;
-    margin-left: 40px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.facebook:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-
-}
-
-.twitter{
-
-    height: 50px;
-    margin-left: 40px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-
-}
-
-.twitter:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-
-.instagram{
-
-    height: 50px;
-    margin-left: 40px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-    transition: 1s;
-    cursor: pointer;
-}
-
-.instagram:hover{
-
-    transform: scale(1.3);
-    z-index: 2;
-}
-
-
-
-
-
-
-
