--- a/New-Compiler/Compiler.css
+++ b/New-Compiler/Compiler.css
@@ -7,15 +7,15 @@ body {
 
 .header{
 	width: 100%;
-	height: 50px;
+	height: 80px;
 	background: blue;
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	align-items: center;
 }
 
 button{
-	
+	margin-left: 250px;
 	background: white;
 	color: #111;
 	font-size: 20px;
